--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "thunderer/shortcode": "^0.7"
+        "thunderer/shortcode": "^0.7",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
